# docs/swagger.yaml
@@ -46,6 +46,53 @@ info:
   version: "1.0"
 paths:
   /api/v1/authors:
+    delete:
+      consumes:
+      - application/json
+      description: Эндпоинт для удаления автора по ID.
+      parameters:
+      - description: Данные автора
+        in: body
+        name: remove
+        required: true
+        schema:
+          $ref: '#/definitions/models.Author'
+      responses:
+        "204":
+          description: Содержимое отсутствует
+        "404":
+          description: Автор не найден
+          schema:
+            type: string
+        "500":
+          description: Ошибка удаления автора
+          schema:
+            type: string
+      summary: Удаление автора по ID
+      tags:
+      - Авторы
+    get:
+      consumes:
+      - application/json
+      description: Эндпоинт для получения автора по ID
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешное получение автора по ID
+          schema:
+            $ref: '#/definitions/models.Author'
+        "404":
+          description: Автор не найден
+          schema:
+            type: string
+        "500":
+          description: Ошибка сериализации данных автора
+          schema:
+            type: string
+      summary: Получение автора по ID
+      tags:
+      - Авторы
     post:
       consumes:
       - application/json
@@ -75,6 +122,35 @@ paths:
       summary: Создание автора
       tags:
       - Авторы
+    put:
+      consumes:
+      - application/json
+      description: Эндпоинт для обновления автора.
+      parameters:
+      - description: Данные автора
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.Author'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Успешное обновление автора
+          schema:
+            $ref: '#/definitions/models.Author'
+        "400":
+          description: Invalid JSON
+          schema:
+            type: string
+        "500":
+          description: Ошибка отправки ответа
+          schema:
+            type: string
+      summary: Обновление автора
+      tags:
+      - Авторы
   /articles:
     get:
       description: Получение списка всех статей
@@ -89,4 +165,25 @@ paths:
             type: array
       tags:
       - Articles
+  /authors/:
+    get:
+      consumes:
+      - application/json
+      description: Эндпоинт для получения списка всех авторов.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Author'
+            type: array
+        "500":
+          description: Failed to get all author | Failed to send response
+          schema:
+            type: string
+      summary: Получение всех авторов
+      tags:
+      - Авторы
 swagger: "2.0"
